--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,6 +8,7 @@
   <packaging>pom</packaging>
   <modules>
     <module>demo</module>
+    <module>app-main</module>
   </modules>
 
   <name>api</name>
