--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,6 +9,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>app-main</module>
+        <module>app-auth</module>
     </modules>
 
     <name>api</name>
