--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,12 +15,14 @@
     <name>api</name>
 
     <properties>
+        <spring.boot.version>3.2.6</spring.boot.version>
+        <lombok.version>1.18.32</lombok.version>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <spring.boot.version>3.2.6</spring.boot.version>
     </properties>
+
 
     <dependencyManagement>
         <dependencies>
@@ -31,6 +33,16 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
+
         </dependencies>
+
+
     </dependencyManagement>
 </project>
