--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -20,12 +20,18 @@
     <dependencies>
         <dependency>
             <groupId>org.hzz</groupId>
-            <artifactId>auth-servier</artifactId>
+            <artifactId>auth-server</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
