--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,7 +15,8 @@
     <name>api</name>
 
     <properties>
-        <spring.boot.version>2.7.18</spring.boot.version>
+<!--        <spring.boot.version>2.7.18</spring.boot.version>-->
+        <spring.boot.version>3.2.6</spring.boot.version>
         <lombok.version>1.18.32</lombok.version>
         <mysql.version>8.0.28</mysql.version>
         <java.version>17</java.version>
@@ -41,14 +42,11 @@
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
-
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
             </dependency>
         </dependencies>
-
-
     </dependencyManagement>
 </project>
