--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -15,6 +15,7 @@
         <start.class>org.hzz.AppMain</start.class>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <resource.delimiter>@</resource.delimiter>
     </properties>
 
     <dependencies>
@@ -31,6 +32,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
@@ -73,6 +78,12 @@
                 </dependencies>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
 </project>
