--- a/api/app-auth/auth-server/pom.xml
+++ b/api/app-auth/auth-server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-auth</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>auth-server</artifactId>
@@ -24,6 +24,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+<!--            <version>${springdoc.version}</version>-->
+            <version>2.5.0</version>
+        </dependency>
+
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
