--- a/api/app-auth/pom.xml
+++ b/api/app-auth/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     
     <artifactId>app-auth</artifactId>
@@ -15,22 +15,10 @@
     <modules>
         <module>auth-server</module>
     </modules>
+
     <properties>
-        <jjwt.version>0.12.5</jjwt.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt</artifactId>
-                <version>${jjwt.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
 </project>
