--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>app-main</artifactId>
