--- a/api/pom.xml
+++ b/api/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.hzz</groupId>
     <artifactId>api</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <modules>
@@ -13,7 +13,7 @@
         <module>app-auth</module>
     </modules>
 
-    <name>胖卡</name>
+    <name>VideosOnline</name>
     <description>🔥😊This is a project that I use for full-stack development😊🔥</description>
     <url>https://pkmer.gitee.io</url>
 
@@ -42,8 +42,9 @@
     <properties>
         <spring.boot.version>3.2.6</spring.boot.version>
         <springdoc.version>2.5.0</springdoc.version>
-        <lombok.version>1.18.32</lombok.version>
+        <lombok.version>1.18.24</lombok.version>
         <mysql.version>8.0.28</mysql.version>
+        <jjwt.version>0.12.5</jjwt.version>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
@@ -71,7 +72,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
+                <version>1.18.24</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -79,6 +80,25 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jjwt.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <scm>
+        <connection>scm:git:https://gitee.com/developeros/videos-online</connection>
+    </scm>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.1</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
