--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>app-main</artifactId>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>auth-server</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
