--- a/api/app-auth/pom.xml
+++ b/api/app-auth/pom.xml
@@ -8,6 +8,8 @@
     </parent>
     
     <artifactId>app-auth</artifactId>
+    <version>1.0.1-SNAPSHOT</version>
+
     <packaging>pom</packaging>
 
     <modules>
