--- a/api/pom.xml
+++ b/api/pom.xml
@@ -88,10 +88,9 @@
         </dependencies>
     </dependencyManagement>
 
-    <!--将所有的代码提交到版本管理库（SVN，GIT）-->
+    <!--scm(Software Configuration Management)将所有的代码提交到版本管理库（SVN，GIT）-->
     <scm>
         <connection>scm:git:https://gitee.com/developeros/videos-online</connection>
-        <tag>HEAD</tag>
     </scm>
     <build>
         <plugins>
