升级springboot到3.3.0.并且整理docker

--- a/api/app-main/src/main/resources/application-dev.yml
+++ b/api/app-main/src/main/resources/application-dev.yml
@@ -1,5 +1,12 @@
 
+
+spring:
+  docker:
+    compose:
+      lifecycle-management: start_only
+
 springdoc:
   use-fqn: true    #  enables fully qualified names
 
+# 用于文档说明
 app-version: '@project.version@'
