--- a/api/app-main/flyway.conf
+++ b/api/app-main/flyway.conf
@@ -1,7 +1,7 @@
 flyway.driver = com.mysql.cj.jdbc.Driver 
-flyway.url = jdbc:mysql://192.168.135.150:3306/videos_online?autoreconnect=true
+flyway.url = jdbc:mysql://localhost:3308/videos_online?autoreconnect=true
 flyway.user = root
-flyway.password = 123
+flyway.password = Root.123456
 flyway.schemas = videos_online
 # 默认为filesystem:src/main/resources/db/migrations
 flyway.locations = classpath:db
