--- a/api/pom.xml
+++ b/api/pom.xml
@@ -41,6 +41,7 @@
     <properties>
         <spring.boot.version>3.3.0</spring.boot.version>
         <springdoc.version>2.5.0</springdoc.version>
+        <mybatis.spring.boot.version>3.0.3</mybatis.spring.boot.version>
         <lombok.version>1.18.24</lombok.version>
         <junit.version>5.9.3</junit.version>
         <mysql.version>8.0.28</mysql.version>
@@ -51,7 +52,20 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
@@ -82,6 +96,11 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.24</version>
                 <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.spring.boot.version}</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
