--- a/api/app-mybatis-generate/pom.xml
+++ b/api/app-mybatis-generate/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>1.0.3</version>
+        <version>1.0.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>app-mybatis-generate</artifactId>
