解决springboot plugin工作目录问题

--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -58,6 +58,7 @@
                 <version>${spring.boot.version}</version>
                 <configuration>
                     <mainClass>${start.class}</mainClass>
+                    <workingDirectory>${project.parent.basedir}</workingDirectory>
                 </configuration>
                 <executions>
                     <execution>
