--- a/api/app-main/src/main/resources/application-dev.yml
+++ b/api/app-main/src/main/resources/application-dev.yml
@@ -4,6 +4,7 @@ spring:
   docker:
     compose:
       lifecycle-management: start_only
+      file: ./compose.yaml
   thymeleaf:
     cache: false
   flyway:
