--- a/api/app-auth/pom.xml
+++ b/api/app-auth/pom.xml
@@ -16,6 +16,14 @@
         <module>auth-server</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-common</artifactId>
+            <version>1.0.4-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
