--- a/api/app-mybatis-generate/pom.xml
+++ b/api/app-mybatis-generate/pom.xml
@@ -15,6 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+
     <build>
         <plugins>
             <plugin>
@@ -39,6 +40,11 @@
                         <groupId>mysql</groupId>
                         <artifactId>mysql-connector-java</artifactId>
                         <version>${mysql.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.hzz</groupId>
+                        <artifactId>app-common</artifactId>
+                        <version>1.0.4-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
             </plugin>
