--- a/api/app-auth/auth-server/pom.xml
+++ b/api/app-auth/auth-server/pom.xml
@@ -18,6 +18,12 @@
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-user</artifactId>
+            <version>1.0.4-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
