--- a/api/app-common/pom.xml
+++ b/api/app-common/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <properties>
