--- a/vue-admin/package.json
+++ b/vue-admin/package.json
@@ -30,6 +30,7 @@
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
     "sass": "^1.77.5",
+    "tsx": "^4.15.4",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
