--- a/vue-admin/package.json
+++ b/vue-admin/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.13.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
@@ -31,7 +31,7 @@
     "prettier": "^3.2.5",
     "sass": "^1.77.5",
     "tsx": "^4.15.4",
-    "typescript": "~5.4.0",
+    "typescript": "^5.4.5",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vue-tsc": "^2.0.11"
