--- a/vue-admin/package.json
+++ b/vue-admin/package.json
@@ -15,6 +15,7 @@
     "test": "yarn tsx scripts/test"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "vue": "^3.4.21"
   },
   "devDependencies": {
