--- a/vue-admin/package.json
+++ b/vue-admin/package.json
@@ -6,6 +6,7 @@
   "packageManager": "yarn@1.22.22",
   "scripts": {
     "dev": "yarn tsx scripts/dev",
+    "prod": "yarn tsx scripts/prod",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
