--- a/vue-admin/package.json
+++ b/vue-admin/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "pinia": "^2.1.7",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
