--- a/api/app-mybatis-generate/pom.xml
+++ b/api/app-mybatis-generate/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>1.0.4-SNAPSHOT</version>
+        <version>1.0.4</version>
     </parent>
 
     <artifactId>app-mybatis-generate</artifactId>
@@ -44,7 +44,7 @@
                     <dependency>
                         <groupId>org.hzz</groupId>
                         <artifactId>app-common</artifactId>
-                        <version>1.0.4-SNAPSHOT</version>
+                        <version>1.0.4</version>
                     </dependency>
                 </dependencies>
             </plugin>
