--- a/api/app-auth/pom.xml
+++ b/api/app-auth/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>1.0.4</version>
+        <version>2.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>app-auth</artifactId>
-    <version>1.0.4</version>
+    <version>2.1.1-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-common</artifactId>
-            <version>1.0.4</version>
+            <version>2.1.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
