--- a/api/app-common/pom.xml
+++ b/api/app-common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>1.0.4</version>
+        <version>2.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>app-common</artifactId>
