--- a/api/app-framework-all/app-ddd-framework-core/pom.xml
+++ b/api/app-framework-all/app-ddd-framework-core/pom.xml
@@ -5,24 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
-        <artifactId>app-user</artifactId>
+        <artifactId>app-framework-all</artifactId>
         <version>2.1.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>user-infrastructure</artifactId>
+    <artifactId>app-ddd-framework-core</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.hzz</groupId>
-            <artifactId>user-domain</artifactId>
-            <version>2.1.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 
 </project>
