--- a/api/pom.xml
+++ b/api/pom.xml
@@ -13,6 +13,7 @@
         <module>app-mybatis-generate</module>
         <module>app-common</module>
         <module>app-user</module>
+        <module>app-framework-all</module>
     </modules>
 
     <name>VideosOnline</name>
