--- a/api/app-framework-all/app-convention-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-convention-spring-boot-starter/pom.xml
@@ -5,24 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
-        <artifactId>app-user</artifactId>
+        <artifactId>app-framework-all</artifactId>
         <version>2.1.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>user-domain</artifactId>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.hzz</groupId>
-            <artifactId>app-ddd-framework-core</artifactId>
-            <version>2.1.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hzz</groupId>
-            <artifactId>app-convention-spring-boot-starter</artifactId>
-            <version>2.1.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <artifactId>app-convention-spring-boot-starter</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
