--- a/api/app-user/user-application/pom.xml
+++ b/api/app-user/user-application/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>user-domain</artifactId>
             <version>2.1.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-designpattern-spring-boot-starter</artifactId>
+            <version>2.1.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
