--- a/api/app-mybatis-generate/pom.xml
+++ b/api/app-mybatis-generate/pom.xml
@@ -43,7 +43,7 @@
                     </dependency>
                     <dependency>
                         <groupId>org.hzz</groupId>
-                        <artifactId>app-common</artifactId>
+                        <artifactId>app-mybatis-spring-boot-starter</artifactId>
                         <version>2.1.1-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
