--- a/api/app-main/src/main/resources/application-dev.yml
+++ b/api/app-main/src/main/resources/application-dev.yml
@@ -32,4 +32,16 @@ springdoc:
 
 # 用于文档说明
 app-version: '@project.version@'
-
+# 自定义的应用配置
+app:
+  jwt:
+    expiration-time: 3600000 # 1h in millisecond
+    secret-key: 9cZjXN9uHH0erCgOAdZCsXIAJbeh7Q43eLa/c1a69rU=
+  auth:
+    ignore-urls:
+      - /auth/*
+      - /error
+      - /index
+      - /index.html
+      - /index.htm
+      - /css/*.css
