--- a/api/app-auth/auth-server/pom.xml
+++ b/api/app-auth/auth-server/pom.xml
@@ -34,6 +34,11 @@
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
+            <artifactId>app-designpattern-spring-boot-starter</artifactId>
+            <version>2.1.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
             <artifactId>app-security-spring-boot-starter</artifactId>
             <version>2.1.1-SNAPSHOT</version>
         </dependency>
@@ -53,16 +58,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-configuration-processor</artifactId>-->
-<!--            <optional>true</optional>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.jsonwebtoken</groupId>-->
-<!--            <artifactId>jjwt</artifactId>-->
-<!--        </dependency>-->
     </dependencies>
 
 </project>
