测试rabbitmq发送消息

--- a/api/app-main/src/main/resources/application-dev.yml
+++ b/api/app-main/src/main/resources/application-dev.yml
@@ -53,8 +53,10 @@ app:
       - /auth/*
       - /auth-test/test
       - /auth-test/error
+      - /learning-test/*
       - /error
       - /index
       - /index.html
       - /index.htm
       - /css/*.css
+      - /favicon.ico
