--- a/api/app-learning/learning-domain/pom.xml
+++ b/api/app-learning/learning-domain/pom.xml
@@ -17,4 +17,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-convention-spring-boot-starter</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
