--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -20,6 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>org.hzz</groupId>
+            <artifactId>app-web-spring-boot-starter</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
             <artifactId>auth-server-interface</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
