添加DDD事件支持

--- a/api/app-learning/pom.xml
+++ b/api/app-learning/pom.xml
@@ -11,6 +11,9 @@
 
     <artifactId>app-learning</artifactId>
     <packaging>pom</packaging>
+
+    <description>学习服务</description>
+
     <modules>
         <module>learning-interface</module>
         <module>learnling-application</module>
