添加测试接口

--- a/api/app-learning/learning-interface/pom.xml
+++ b/api/app-learning/learning-interface/pom.xml
@@ -23,6 +23,16 @@
             <artifactId>learnling-application</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>order-types</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>learning-types</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
