完成course基础层操作

--- a/api/app-framework-all/pom.xml
+++ b/api/app-framework-all/pom.xml
@@ -18,6 +18,7 @@
         <module>app-web-spring-boot-starter</module>
         <module>app-mybatis-spring-boot-starter</module>
         <module>app-rabbitmq-spring-boot-starter</module>
+        <module>app-common-spring-boot-starter</module>
     </modules>
 
     <properties>
