--- a/api/app-course/course-domain/pom.xml
+++ b/api/app-course/course-domain/pom.xml
@@ -17,4 +17,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-ddd-framework-core</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
