--- a/api/app-course/course-infrastructure/pom.xml
+++ b/api/app-course/course-infrastructure/pom.xml
@@ -23,5 +23,15 @@
             <artifactId>course-domain</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-convention-spring-boot-starter</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz.common</groupId>
+            <artifactId>app-common-spring-boot-starter</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
