--- a/api/app-main/src/main/resources/application-dev.yml
+++ b/api/app-main/src/main/resources/application-dev.yml
@@ -35,6 +35,7 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
   mapper-locations:
     - classpath*:mapper/**/*.xml
 
