雪花算法生成id成功

--- a/api/app-learning/learning-infrastructure/pom.xml
+++ b/api/app-learning/learning-infrastructure/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>app-common-spring-boot-starter</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-mybatis-spring-boot-starter</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
