--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -38,7 +38,8 @@
             <groupId>org.hzz.course</groupId>
             <artifactId>course-interface</artifactId>
             <version>2.2.1-SNAPSHOT</version>
-        </dependency><!--   自身依赖End     -->
+        </dependency>
+        <!--   自身依赖End     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
