添加自定义切面

--- a/api/app-framework-all/pom.xml
+++ b/api/app-framework-all/pom.xml
@@ -19,6 +19,7 @@
         <module>app-mybatis-spring-boot-starter</module>
         <module>app-rabbitmq-spring-boot-starter</module>
         <module>app-common-spring-boot-starter</module>
+        <module>app-aop-spring-boot-starter</module>
     </modules>
 
     <properties>
