--- a/api/app-framework-all/app-aop-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-aop-spring-boot-starter/pom.xml
@@ -5,12 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
-        <artifactId>app-learning</artifactId>
+        <artifactId>app-framework-all</artifactId>
         <version>2.2.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>learning-interface</artifactId>
-
+    <groupId>org.hzz.aop</groupId>
+    <artifactId>app-aop-spring-boot-starter</artifactId>
+    <description>定义自己的aop切面</description>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -20,24 +21,12 @@
     <dependencies>
         <dependency>
             <groupId>org.hzz</groupId>
-            <artifactId>learnling-application</artifactId>
+            <artifactId>app-convention-spring-boot-starter</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.hzz</groupId>
-            <artifactId>order-types</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hzz</groupId>
-            <artifactId>learning-types</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hzz</groupId>
-            <artifactId>app-security-spring-boot-starter</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
     </dependencies>
-
 </project>
