--- a/api/app-framework-all/app-security-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-security-spring-boot-starter/pom.xml
@@ -9,11 +9,18 @@
 
     <artifactId>app-security-spring-boot-starter</artifactId>
     <dependencies>
+        <!--  自身依赖start      -->
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-designpattern-spring-boot-starter</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-convention-spring-boot-starter</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+        <!--  自身依赖end      -->
         <dependency>
             <groupId>com.password4j</groupId>
             <artifactId>password4j</artifactId>
