--- a/api/app-framework-all/app-fastjson2-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-fastjson2-spring-boot-starter/pom.xml
@@ -21,7 +21,8 @@
     <dependencies>
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
-            <artifactId>fastjson2-extension-spring5</artifactId>
+            <artifactId>fastjson2-extension-spring6</artifactId>
+            <version>2.0.51</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
