--- a/api/app-learning/learning-interface/pom.xml
+++ b/api/app-learning/learning-interface/pom.xml
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>org.hzz</groupId>
-            <artifactId>learnling-application</artifactId>
+            <artifactId>learning-application</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
