--- a/api/app-learning/learning-infrastructure/pom.xml
+++ b/api/app-learning/learning-infrastructure/pom.xml
@@ -18,6 +18,7 @@
     </properties>
 
     <dependencies>
+        <!--   自身依赖start     -->
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>learning-domain</artifactId>
@@ -37,6 +38,11 @@
             <groupId>org.hzz</groupId>
             <artifactId>app-mybatis-spring-boot-starter</artifactId>
             <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+        <!--   自身依赖start     -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
         </dependency>
     </dependencies>
 
