--- a/api/compose.yaml
+++ b/api/compose.yaml
@@ -26,3 +26,12 @@ services:
     ports:
       - "15672:15672"
       - "5672:5672"
+  redis:
+    container_name: video_redis
+    image: redis:7.2.5
+    restart: unless-stopped
+    volumes:
+      - "./docker_data/redis:/data"
+    ports:
+      - 6379:6379
+    command: ["redis-server", "--appendonly", "yes"]
