--- a/api/app-framework-all/pom.xml
+++ b/api/app-framework-all/pom.xml
@@ -21,6 +21,7 @@
         <module>app-common-spring-boot-starter</module>
         <module>app-aop-spring-boot-starter</module>
         <module>app-fastjson2-spring-boot-starter</module>
+        <module>app-cache-spring-boot-starter</module>
     </modules>
 
     <properties>
